[tool.poetry]
name = "acados_vendor_ros2_meta"
version = "0.0.0"
description = ""
authors = ["Nathan Edwards <nathan.edwards@greenroomrobotics.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
casadi = "^3.7.1"
future-fstrings = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
